--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=testmanagement
-spring.datasource.url=jdbc:mysql://localhost:3306/testmanagement?useSSL=false&serverTimezone=UTC
+server.address=0.0.0.0
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3307/testmanagement?useSSL=false&&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=r41wgHxB3aSk
+spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +14,5 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.example.testmanagement=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.validation=DEBUG
+
+token.signing.key=Zm9vYmFyYmF6cXV4c3l6d2VydHkxMjM0NTY3ODkwMTIzNA==
