--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,7 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.example.testmanagement=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.validation=DEBUG
+spring.main.allow-circular-references=true
+
 
 token.signing.key=Zm9vYmFyYmF6cXV4c3l6d2VydHkxMjM0NTY3ODkwMTIzNA==
